[tool.poetry]
name = "games"
version = "0.1.0"
description = ""
authors = ["chwilko <bartekchwilkowski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
Flask = "^2.3.2"
Flask-Cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
